# Green-Mountain-Grills

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  HANDOFF.md  LICENSE  README.md  cook-database.json  hacs.json  pyproject.toml  requirements.test.txt  requirements.txt
.github/workflows/: lint.yml  test.yml  validate.yml
custom_components/gmg/: __init__.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  cook_manager.py  cook_physics.py  coordinator.py  diagnostics.py  entity.py  icons.json  manifest.json  number.py  quality_scale.yaml  select.py  sensor.py  services.py  services.yaml  strings.json  units.py
custom_components/gmg/api/: __init__.py  client.py  const.py  discovery.py  exceptions.py  models.py  protocol.py
custom_components/gmg/static/: gmg-smoker-strategy.js
custom_components/gmg/static/models/: README.md
custom_components/gmg/translations/: en.json
docs/: INSTALL.md  MODELS.md  PROTOCOL.md
tests/: __init__.py  conftest.py  test_config_flow.py  test_cook_manager.py  test_cook_physics.py  test_init.py  test_protocol.py  test_units.py
